[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/Other/plantRed_6.png" type="Texture" id=1]
[ext_resource path="res://assets/Other/plantRed_4.png" type="Texture" id=2]
[ext_resource path="res://assets/Other/plantRed_5.png" type="Texture" id=3]
[ext_resource path="res://assets/Other/plantBlue_2.png" type="Texture" id=4]
[ext_resource path="res://assets/Other/plantBlue_1.png" type="Texture" id=5]
[ext_resource path="res://assets/Other/plantBlue_3.png" type="Texture" id=6]
[ext_resource path="res://assets/Other/plantBlue_4.png" type="Texture" id=7]
[ext_resource path="res://assets/Other/plantRed_1.png" type="Texture" id=8]
[ext_resource path="res://assets/Other/plantGreen_1.png" type="Texture" id=9]
[ext_resource path="res://game/items/plants/PlantReference.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.3061, 21.1772 )

[sub_resource type="Animation" id=2]
resource_name = "reset"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "rotate"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, 10.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="PlantReference" type="Node2D"]
z_index = 25
z_as_relative = false
script = ExtResource( 10 )

[node name="PlayerDetector" type="Area2D" parent="."]
position = Vector2( 0, -20.9977 )
collision_layer = 0

[node name="CollisionShape" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -0.224987 )
texture = ExtResource( 9 )
offset = Vector2( 0, -21.775 )

[node name="Sprites" type="Sprite" parent="."]
visible = false

[node name="SpriteVisualBlue" type="Sprite" parent="Sprites"]

[node name="plantBlue_1" type="Sprite" parent="Sprites/SpriteVisualBlue"]
visible = false
position = Vector2( 0, -24 )
texture = ExtResource( 5 )

[node name="plantBlue_2" type="Sprite" parent="Sprites/SpriteVisualBlue"]
visible = false
position = Vector2( 0, -16 )
texture = ExtResource( 4 )

[node name="plantBlue_3" type="Sprite" parent="Sprites/SpriteVisualBlue"]
visible = false
position = Vector2( 0, -11 )
texture = ExtResource( 6 )

[node name="plantBlue_4" type="Sprite" parent="Sprites/SpriteVisualBlue"]
visible = false
position = Vector2( 0, -26.6967 )
texture = ExtResource( 7 )

[node name="SpriteVisualRed" type="Sprite" parent="Sprites"]

[node name="plantRed_1" type="Sprite" parent="Sprites/SpriteVisualRed"]
visible = false
position = Vector2( 0, -14.8864 )
texture = ExtResource( 8 )

[node name="plantRed_5" type="Sprite" parent="Sprites/SpriteVisualRed"]
visible = false
position = Vector2( 0, -16 )
texture = ExtResource( 3 )

[node name="plantRed_4" type="Sprite" parent="Sprites/SpriteVisualRed"]
visible = false
position = Vector2( 0, -18.45 )
texture = ExtResource( 2 )

[node name="plantRed_6" type="Sprite" parent="Sprites/SpriteVisualRed"]
visible = false
position = Vector2( 0, -25.225 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/reset = SubResource( 2 )
anims/rotate = SubResource( 3 )

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
